Drag-to-Open failed in Movie Clip Editor #35773

Closed
opened 2013-06-16 06:22:21 +02:00 by Leon Cheung · 8 comments
Member

%%%2.67b | Win7 64bit

Unlike UV/Image Editor, Node Editor and VSE, this feature doesn't work quite well in Movie Clip Editor as they did. I can only sucessfully drag some case in, but not always, although for the same format. Such as *.mp4, and some image cases. However, the normal Open button works well.

Thanks for checking. %%%

%%%2.67b | Win7 64bit Unlike UV/Image Editor, Node Editor and VSE, this feature doesn't work quite well in Movie Clip Editor as they did. I can only sucessfully drag some case in, but not always, although for the same format. Such as *.mp4, and some image cases. However, the normal Open button works well. Thanks for checking. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Reminder: Please keep our bug report preformatting, OK?%%%

%%%Reminder: Please keep our bug report preformatting, OK?%%%
Author
Member

%%%@Ton, It seems that I've posted quite a lot things here in one day, sorry for that. In fact, they are just ones I collected during weeks.

I have to admit that I'm not a coder, I highly respect all your endeavors, for sure.
Anyway, will try to strictly follow the rule as I would in the future.
Probably ML is a better place for discussing and pre-confirming, I should say?%%%

%%%@Ton, It seems that I've posted quite a lot things here in one day, sorry for that. In fact, they are just ones I collected during weeks. I have to admit that I'm not a coder, I highly respect all your endeavors, for sure. Anyway, will try to strictly follow the rule as I would in the future. Probably ML is a better place for discussing and pre-confirming, I should say?%%%

%%%Could not confirm the issue, drag-n-drop works fine here on windows 7 64bit.

My guess would be that you'r scene frame is different from 1at the moment you're considering drag-n-drop doesn't work.The thing here is, when you don't have numerc group in the tail of name, the same image would be displayed at all the frames. But if there's a numeric group at the end, it'll act as image sequence.

Alo, pre-confirming is not so good idea. Ton just asked to follow our template of the bug report.%%%

%%%Could not confirm the issue, drag-n-drop works fine here on windows 7 64bit. My guess would be that you'r scene frame is different from 1at the moment you're considering drag-n-drop doesn't work.The thing here is, when you don't have numerc group in the tail of name, the same image would be displayed at all the frames. But if there's a numeric group at the end, it'll act as image sequence. Alo, pre-confirming is not so good idea. Ton just asked to follow our template of the bug report.%%%
Author
Member

%%%Sure, I saw Ton's point. Thanks though.

You are right about the current frame position for images. This is my bad. :)

However, about VIDEO clips, I got video fomats like AVI and MP4, MPG, MOV, WMV, FLV, etc, that cannot be dragged in. But 3GP, WEBM, and Realmedia are fine still. I didn't uploaded videos, since they were sort of big, If it still cannot be confirmed by your side, I'll try to upload the videos for test. Looking forward to your reply. Thanks. %%%

%%%Sure, I saw Ton's point. Thanks though. You are right about the current frame position for images. This is my bad. :) However, about VIDEO clips, I got video fomats like AVI and MP4, MPG, MOV, WMV, FLV, etc, that cannot be dragged in. But 3GP, WEBM, and Realmedia are fine still. I didn't uploaded videos, since they were sort of big, If it still cannot be confirmed by your side, I'll try to upload the videos for test. Looking forward to your reply. Thanks. %%%

%%%For what it's worth, I have same issue dragging to movie clip editor from either file browser within Blender, or from Desktop / system filebrowser. It worked for a webm I tried but mp4, avi, mkv dont of those did%%%

%%%For what it's worth, I have same issue dragging to movie clip editor from either file browser within Blender, or from Desktop / system filebrowser. It worked for a webm I tried but mp4, avi, mkv dont of those did%%%

%%%Fixed in svn rev57568. Thanks for the report, closing.%%%

%%%Fixed in svn rev57568. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35773
No description provided.