Fix #35773: Drag-to-Open failed in Movie Clip Editor